chore: 鏇存柊鍚庣URL閰嶇疆涓篟ender鏈嶅姟鍦板潃

--- a/backend/env.example
+++ b/backend/env.example
@@ -10,9 +10,15 @@ VOLCENGINE_ACCESS_KEY_ID=your_access_key_id_here
 # 火山引擎 Secret Access Key (Base64 编码)
 VOLCENGINE_SECRET_ACCESS_KEY=your_secret_access_key_here
 
+# Seedance 1.0 Lite I2V API Key 即梦AI-视频生成3.0pro
+DOUBAO_SEEDANCE_1_0_LITE_API_KEY=sk-DzzAX3YmhTZG8BV7GTo3qgvkh6cye1fJty1igEChHxmv8NVu
+
+# Seedance 1.5 Pro API Key 即梦AI-视频生成3.5pro
+DOUBAO_SEEDANCE_1_5_PRO_API_KEY=sk-4qOfXiYXE2EHRW1QDmfIhlTaWLwdIc5dTmR3QRcsuKztCE4R
+
 # 服务器配置
 HOST=0.0.0.0
-PORT=8000
+PORT=8001
 
 # 其他 API 配置（可选）
 API_KEY=
@@ -21,24 +27,44 @@ SEEDANCE_API_ENDPOINT=
 # Supabase 数据库配置
 # 获取方式：Supabase Dashboard → Project Settings → Database → Connection string
 # 格式：postgresql://postgres:[PASSWORD]@[PROJECT-REF].supabase.co:5432/postgres
-SUPABASE_DB_URL=postgresql://postgres:[YOUR-PASSWORD]@[PROJECT-REF].supabase.co:5432/postgres
+# 项目对应的 Supabase 数据库连接字符串
+SUPABASE_DB_URL=postgresql://postgres.ogndfzxtzsifaqwzfojs:2003419519CFF@aws-1-ap-south-1.pooler.supabase.com:5432/postgres
 
 # 默认用户 API Key（单用户模式）
 DEFAULT_API_KEY=default_key
 
-# 对象存储配置（二选一）
-# 方式1：阿里云 OSS
-STORAGE_TYPE=aliyun_oss
-ALIYUN_OSS_ACCESS_KEY_ID=your_access_key_id
-ALIYUN_OSS_ACCESS_KEY_SECRET=your_access_key_secret
-ALIYUN_OSS_BUCKET_NAME=your_bucket_name
-ALIYUN_OSS_ENDPOINT=oss-cn-beijing.aliyuncs.com
-ALIYUN_OSS_BUCKET_DOMAIN=your-cdn-domain.com  # CDN域名（可选）
+# 对象存储配置
+# 方式1：腾讯云 COS（推荐）
+STORAGE_TYPE=tencent_cos
+COS_SECRET_ID=your_secret_id
+COS_SECRET_KEY=your_secret_key
+COS_REGION=ap-guangzhou  # 根据你选择的地域，如：ap-guangzhou, ap-shanghai, ap-beijing
+COS_BUCKET=your_bucket_name
+COS_BUCKET_DOMAIN=your-cdn-domain.com  # CDN域名（可选）
 
-# 方式2：亚马逊 S3
+# 方式2：阿里云 OSS（可选）
+# STORAGE_TYPE=aliyun_oss
+# ALIYUN_OSS_ACCESS_KEY_ID=your_access_key_id
+# ALIYUN_OSS_ACCESS_KEY_SECRET=your_access_key_secret
+# ALIYUN_OSS_BUCKET_NAME=your_bucket_name
+# ALIYUN_OSS_ENDPOINT=oss-cn-beijing.aliyuncs.com
+# ALIYUN_OSS_BUCKET_DOMAIN=your-cdn-domain.com  # CDN域名（可选）
+
+# 方式3：亚马逊 S3（可选）
 # STORAGE_TYPE=s3
 # AWS_ACCESS_KEY_ID=your_access_key_id
 # AWS_SECRET_ACCESS_KEY=your_secret_access_key
 # AWS_S3_BUCKET_NAME=your_bucket_name
 # AWS_S3_REGION=us-east-1
+
+# MCP 服务配置（用于修复历史记录）
+# Supabase MCP 配置
+SUPABASE_PROJECT_REF=sggdokxjqycskeybyqvv
+SUPABASE_ACCESS_TOKEN=sbp_55d3bff12a73fad53040ea5b2db387d0d84a2e03
+
+# Vercel MCP 配置
+VERCEL_TOKEN=bUFnjiVqrAvBYZyTmED7Q9wl
+
+# Render API 配置
+RENDER_API_KEY=rnd_QtPtywDxKnQAUCABtvIwBiwf0lvX
 
