refactor: 绉婚櫎3.0pro鏀寔锛屼粎淇濈暀3.5pro骞朵慨澶岮PI璋冪敤閿欒

--- a/backend/env.example
+++ b/backend/env.example
@@ -10,10 +10,7 @@ VOLCENGINE_ACCESS_KEY_ID=your_access_key_id_here
 # 火山引擎 Secret Access Key (Base64 编码)
 VOLCENGINE_SECRET_ACCESS_KEY=your_secret_access_key_here
 
-# Seedance 1.0 Lite I2V API Key 即梦AI-视频生成3.0pro
-DOUBAO_SEEDANCE_1_0_LITE_API_KEY=sk-DzzAX3YmhTZG8BV7GTo3qgvkh6cye1fJty1igEChHxmv8NVu
-
-# Seedance 1.5 Pro API Key 即梦AI-视频生成3.5pro
+# Seedance 1.5 Pro API Key 即梦AI-视频生成3.5pro（仅支持3.5pro）
 DOUBAO_SEEDANCE_1_5_PRO_API_KEY=sk-4qOfXiYXE2EHRW1QDmfIhlTaWLwdIc5dTmR3QRcsuKztCE4R
 
 # 服务器配置
